# github-research-mcp

./: .gitignore  DEVELOPMENT.md  README.md  makefile  pyproject.toml
.github/workflows/: publish-github-research-mcp.yml  test.yml
src/github_research_mcp/: agents_md.py  code_search.py  main.py  public.py
src/github_research_mcp/clients/: cache.py  elasticsearch.py  github.py
src/github_research_mcp/clients/errors/: github.py
src/github_research_mcp/clients/models/: github.py
src/github_research_mcp/models/: __init__.py
src/github_research_mcp/models/graphql/: base.py  fragments.py  issue_or_pull_request.py  queries.py
src/github_research_mcp/models/query/: base.py  code.py  issue_or_pull_request.py
src/github_research_mcp/models/repository/: tree.py
src/github_research_mcp/sampling/: extract.py  google_genai.py  handler.py  prompts.py  utility.py
src/github_research_mcp/servers/: base.py  code.py  issues_or_pull_requests.py  public.py  repository.py  research.py  summary.py
src/github_research_mcp/servers/middleware/: models.py
src/github_research_mcp/servers/models/: repository.py  summary.py
src/github_research_mcp/servers/prompts/: summarize_repository.py
src/github_research_mcp/servers/shared/: annotations.py  errors.py  prompts.py  utility.py
src/github_research_mcp/utilities/: stars.py
tests/: conftest.py  constants.py  test_agents_md.py  test_code_search.py  test_main.py
tests/clients/: test_github.py
tests/query/: test_base.py
tests/sampling/: test_extract.py  test_utility.py
tests/servers/: conftest.py  test_code.py  test_issues_or_pull_requests.py  test_public.py  test_repository.py  test_research.py  test_summary.py
tests/utilities/: test_stars.py
